--- a/index.html
+++ b/index.html
@@ -46,38 +46,38 @@
 				<div id="menu">
 				    <div class="panel">
 				      <h1 class="name">
-				        <a style="text-decoration:none" href="../helpdesk/">
-				          <div>HelpDesk</div>
+				        <a style="text-decoration:none" href="#">
+				          <div>Feed</div>
 				        </a>
 				      </h1>
-				      <h2 class="type">Mesa de Ayuda</h2>
+				      <h2 class="type">Comentarios</h2>
 				    </div>
 
 				    <div class="panel">
 				      <h1 class="name">
-				        <a style="text-decoration:none" href="../sie/">
-				          <div>SIE</div>
+				        <a style="text-decoration:none" href="#">
+				          <div>Users</div>
 				        </a>
 				      </h1>
-				      <h2 class="type">Sistema de Información Empresarial</h2>
+				      <h2 class="type">Usuarios</h2>
 				    </div>
 
 				    <div class="panel">
 				      <h1 class="name">
-				        <a style="text-decoration:none" href="../master/production/">
-				          <div>Social</div>
+				        <a style="text-decoration:none" href="#">
+				          <div>Games</div>
 				        </a>
 				      </h1>
-				      <h2 class="type">Sistema de Gestión</h2>
+				      <h2 class="type">Juegos</h2>
 				    </div>
 
 				    <div class="panel">
 				      <h1 class="name">
-				        <a style="text-decoration:none" href="../OT/">
-				          <div>OT</div>
+				        <a style="text-decoration:none" href="#">
+				          <div>Consoles</div>
 				        </a>
 				      </h1>
-				      <h2 class="type">Gestión de Ordenes de Trabajo</h2>
+				      <h2 class="type">Consolas</h2>
 				    </div>
 
 				    <form id="order">
