--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 				<div class="r2"></div>
 			</div>
 		</div>
-
+		
+		
+		<div id="game-info"></div>
+		
 		<div class="menu-container">
 			<div class="menu-sliders"></div>
 			<div class="menu-sliders"></div>
