--- a/index.html
+++ b/index.html
@@ -99,6 +99,6 @@
 	</div>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 	<script  src="js/index.js"></script>
-	<script type="module" src="node_modules/akissame.mjs"></script>
+	<script src="node_modules/akissame.mjs"></script>
 </body>
 </html>
