--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			</div>
 		</div>
 		
-		
-		<div id="game-info"></div>
+		<h1>Game Info:</h1>
+		<pre id="game-info"></pre>
 		
 		<div class="menu-container">
 			<div class="menu-sliders"></div>
@@ -99,6 +99,18 @@
 	</div>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 	<script  src="js/index.js"></script>
-	<script src="node_modules/akissame.mjs"></script>
+	<script type="module">
+		import { buildAuthorization } from "@retroachievements/api";
+		import { getGame } from "@retroachievements/api";
+  
+		const userName = "Akissame";
+		const webApiKey = "HLZerHixAZw3JE0S56L2uRhrNtIF2PDF";
+		const authorization = buildAuthorization({ userName, webApiKey });
+
+		getGame(authorization, { gameId: 785 }).then((game) => {
+		  const gameJson = JSON.stringify(game, null, 2);
+		  document.getElementById("game-info").textContent = gameJson;
+		});
+	  </script>
 </body>
 </html>
