--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
 			</div>
 		</div>
 	</div>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
+	<script  src="js/index.js"></script>
 	<script type="module">
-		import { buildAuthorization } from "../node_modules/@retroachievements/api";
-		import { getGame } from "../node_modules/@retroachievements/api";
+		import { buildAuthorization } from "node_modules/@retroachievements/api";
+		import { getGame } from "node_modules/@retroachievements/api";
   
 		const userName = "Akissame";
 		const webApiKey = "HLZerHixAZw3JE0S56L2uRhrNtIF2PDF";
