--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 		
-		<h1>Game Info:</h1>
+		<h1>Game Info Basic:</h1>
 		<pre id="game-info"></pre>
 		
 		<div class="menu-container">
