--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
+
   <title>Akissame</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
