--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	</div>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 	<script  src="js/index.js"></script>
-	<script type="module">
+	<script>
 		import { buildAuthorization } from "@retroachievements/api";
 		import { getGame } from "@retroachievements/api";
   
