--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<pre id="game-info"></pre>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-	<script  src="js/index.js"></script>
+	<script type="module"  src="js/index.js"></script>
 
 </body>
 </html>
