--- a/index.html
+++ b/index.html
@@ -20,7 +20,18 @@
 	<pre id="game-info"></pre>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
-	<script type="module"  src="js/index.js"></script>
+	<script type="module">
+		import { buildAuthorization } from "./@retroachievements/api";
+		import { getGame } from "./@retroachievements/api";
+		const userName = "Akissame";
+		const webApiKey = "HLZerHixAZw3JE0S56L2uRhrNtIF2PDF";
+		const authorization = buildAuthorization({ userName, webApiKey });
+
+		getGame(authorization, { gameId: 785 }).then((game) => {
+			const gameJson = JSON.stringify(game, null, 2);
+			document.getElementById("game-info").textContent = gameJson;
+		});
+	</script>
 
 </body>
 </html>
