--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	<pre id="game-info"></pre>
 
 	<script type="module">
-		import { buildAuthorization } from "@retroachievements/api";
-		import { getGame } from "@retroachievements/api";
+		import { buildAuthorization } from "/@retroachievements/api";
+		import { getGame } from "/@retroachievements/api";
 		const userName = "Akissame";
 		const webApiKey = "HLZerHixAZw3JE0S56L2uRhrNtIF2PDF";
 		const authorization = buildAuthorization({ userName, webApiKey });
