--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>Game Info:</h1>
 	<pre id="game-info"></pre>
 
-	<script type="module">
+	<script >
 		import { buildAuthorization } from "/@retroachievements/api";
 		import { getGame } from "/@retroachievements/api";
 		const userName = "Akissame";
