--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>Game Info Basicx:</h1>
 	<pre id="game-info"></pre>
 
-	<script type="module" src="js/index.js"></script>>
+	<script type="module" src="akissame.mjs"></script>>
 
 
 </body>
