--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	
-	<h1>Game Info:</h1>
+	<h1>Game Info XD:</h1>
 	<pre id="game-info"></pre>
 
 	<script type="module" src="akissame.mjs"></script>>
