--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<h1>Game Info:</h1>
 	<pre id="game-info"></pre>
 
-	<script type="module" src="node_modules/akissame.mjs"></script>>
+	<script type="module" src="node_modules/akissame.mjs"></script>
 
 
 </body>
