--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 <body>
 	
-	<h1>Game Info XDSL:</h1>
+	<h1>Game Info:</h1>
 	<pre id="game-info"></pre>
 
-	<script type="module" src="../node_modules/akissame.mjs"></script>
+	<script type="module" src="../node_modules/akissame.js"></script>
 
 
 </body>
