--- a/index.html
+++ b/index.html
@@ -1,19 +1,8 @@
 <!DOCTYPE html>
-<html lang="es" >
-
-<head>
-	<title>Akissame</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-</head>
 
 <body>
-	
-	<h1>Game Info Si:</h1>
+	<h1>Game Info:</h1>
 	<pre id="game-info"></pre>
-
 	<script src="node_modules/akissame.js"></script>
-
-
 </body>
 </html>
