--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <body>
-	<h1>Game Info:</h1>
+	<h1>Game Info ..............:</h1>
 	<pre id="game-info"></pre>
-	<script src="node_modules/akissame.js"></script>
+	<script src="js/index.js"></script>
 </body>
 </html>
