--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
 <body>
-	<h1>Game Info ..............:</h1>
+	<h1>Game Info Module:</h1>
 	<pre id="game-info"></pre>
-	<script src="js/index.js"></script>
+	<script type="module" src="js/index.js"></script>
+
 </body>
 </html>
