--- a/game.html
+++ b/game.html
@@ -4,47 +4,138 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirigiendo a Retro Achievements</title>
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            background-color: #000000;
+            overflow: hidden;
+            background-image: radial-gradient(ellipse farthest-corner at center top, #23233f 0%, #000000 60%);
+            background-size: cover;
+            background-position: top center;
+            font-family: 'Orbitron', sans-serif;
+        }
+        #retrobg {
+            position: relative;
+            overflow: hidden;
+            height: 100%;
+            color: #a3c;
+        }
+        #retrobg-sky {
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 55%;
+            background: linear-gradient(#214 75%, #249);
+        }
+        #retrobg-sunWrap {
+            position: absolute;
+            top: 30%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+        #retrobg-sun {
+            --glow-color: #d44;
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(#fcdf11, #ff623f, #fe2085 50%);
+            box-shadow: 0 0 50px 20px var(--glow-color);
+            animation: 2s ease infinite alternate retrobg-sun-glow-anim;
+        }
+        @keyframes retrobg-sun-glow-anim {
+            from { box-shadow: 0 0 50px 20px var(--glow-color); }
+            to { box-shadow: 0 0 60px 30px var(--glow-color); }
+        }
+        #retrobg-stars {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+        .retrobg-star {
+            position: absolute;
+            border-radius: 50%;
+            width: 2px;
+            height: 2px;
+            background-color: #fff;
+        }
+        #content {
+            position: relative;
+            z-index: 10;
+            text-align: center;
+            padding-top: 20vh;
+        }
+        h1 {
+            color: #C6CBF5;
+            font-size: 60px;
+            margin: 0;
+            text-transform: uppercase;
+            background: linear-gradient(to bottom, #151C60, #C6CBF5 40%, black 40%, #E1A0CE 65%, white);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke-width: 2px;
+            -webkit-text-stroke-color: white;
+        }
+        p {
+            color: #d100b1;
+            font-size: 24px;
+            margin-top: 20px;
+            text-shadow: 0 0 5px #d100b1, 0 0 15px rgba(209, 0, 177, 0.5);
+        }
+        #retrobg-ground {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            height: 45%;
+            background-color: #000;
+        }
+    </style>
+</head>
+<body>
+    <div id="retrobg">
+        <div id="retrobg-sky">
+            <div id="retrobg-stars">
+                <div class="retrobg-star" style="left: 5%; top: 55%; transform: scale(2);"></div>
+                <div class="retrobg-star" style="left: 7%; top: 5%; transform: scale(2);"></div>
+                <div class="retrobg-star" style="left: 10%; top: 45%; transform: scale(1);"></div>
+                <div class="retrobg-star" style="left: 12%; top: 35%; transform: scale(1);"></div>
+                <div class="retrobg-star" style="left: 15%; top: 39%; transform: scale(1);"></div>
+                <div class="retrobg-star" style="left: 20%; top: 10%; transform: scale(1);"></div>
+                <div class="retrobg-star" style="left: 35%; top: 50%; transform: scale(2);"></div>
+                <div class="retrobg-star" style="left: 40%; top: 16%; transform: scale(2);"></div>
+                <div class="retrobg-star" style="left: 43%; top: 28%; transform: scale(1);"></div>
+                <div class="retrobg-star" style="left: 45%; top: 30%; transform: scale(3);"></div>
+            </div>
+            <div id="retrobg-sunWrap">
+                <div id="retrobg-sun"></div>
+            </div>
+        </div>
+        <div id="retrobg-ground"></div>
+        <div id="content">
+            <h1>Retro Achievements</h1>
+            <p>Redirigiendo a la aplicación o a la Play Store...</p>
+        </div>
+    </div>
+
     <script>
         window.onload = function() {
             var urlParams = new URLSearchParams(window.location.search);
             var gameId = urlParams.get('id');
             
-            // Intenta abrir la app con el gameId si está disponible
             if (gameId) {
                 window.location = 'retroachievements://game/' + gameId;
             } else {
                 window.location = 'retroachievements://open';
             }
             
-            // Si después de 2 segundos no se ha abierto la app, redirige a Play Store
             setTimeout(function() {
                 window.location = 'https://play.google.com/store/apps/details?id=com.akissame.retroachievements';
             }, 2000);
         }
+
+        document.querySelector("#retrobg-sun").onclick = () => {
+            document.querySelector("#retrobg").classList.toggle("retrobg-shutdown");
+        };
     </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Retro Achievements</h1>
-        <p>Redirigiendo a la aplicación Retro Achievements o a la Play Store...</p>
-    </div>
 </body>
 </html>
