--- a/game.html
+++ b/game.html
@@ -113,7 +113,7 @@
         <div class="loading">
             <div class="loading-bar" id="loadingBar"></div>
         </div>
-        <p id="redirect-message">REDIRIGIENDO EN 3...</p>
+        <p id="redirect-message">3</p>
     </div>
 
     <div class="pixel-art" id="pixelArt"></div>
