--- a/user.html
+++ b/user.html
@@ -5,7 +5,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retro Achievements</title>
     <style>
-        /* ... (el resto del CSS permanece igual) ... */
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Press Start 2P', cursive;
+            background-color: #4A0E4E;  /* Fondo morado oscuro */
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            overflow: hidden;
+        }
+
+        .container {
+            text-align: center;
+            padding: 20px;
+            position: relative;
+        }
+
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #FFA500;  /* Naranja */
+            text-shadow: 2px 2px #800080;  /* Sombra morada */
+        }
+
+        p {
+            font-size: 16px;
+            margin-bottom: 20px;
+            color: #FFD700;  /* Amarillo dorado */
+        }
+
+        .loading {
+            width: 100%;
+            max-width: 300px;
+            height: 20px;
+            background-color: #2E062F;  /* Morado más oscuro */
+            border: 2px solid #FFA500;  /* Borde naranja */
+            margin: 20px auto;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .loading-bar {
+            width: 0%;
+            height: 100%;
+            background-color: #FFA500;  /* Barra de carga naranja */
+            transition: width 1s linear;
+        }
+
+        .pixel-art {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            opacity: 0.2;
+        }
+
+        .pixel {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #fff;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 20px;
+            }
+
+            p {
+                font-size: 14px;
+            }
+
+            .loading {
+                max-width: 250px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
+                font-size: 18px;
+            }
+
+            p {
+                font-size: 12px;
+            }
+
+            .loading {
+                max-width: 200px;
+            }
+        }
     </style>
 </head>
 <body>
