--- a/404.html
+++ b/404.html
@@ -1,8 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <meta http-equiv="refresh" content="0; URL=/" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 - Página no encontrada</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            min-height: 100vh;
+            background: linear-gradient(180deg, #2b1055 0%, #7597de 100%);
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+        }
+
+        .container {
+            padding: 20px;
+        }
+
+        .error-code {
+            font-size: 120px;
+            font-weight: bold;
+            margin: 0;
+            background: linear-gradient(to right, #ff0080, #ff8c00);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+        }
+
+        .title {
+            font-size: 24px;
+            margin: 20px 0;
+            color: #ff0080;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .description {
+            font-size: 18px;
+            margin: 20px 0;
+            color: #fff;
+            max-width: 600px;
+        }
+
+        .grid {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 50vh;
+            background: linear-gradient(180deg, transparent 0%, rgba(0,0,0,0.8) 100%);
+            transform-origin: bottom;
+            transform: perspective(300px) rotateX(30deg);
+            z-index: -1;
+        }
+
+        .grid::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: repeating-linear-gradient(90deg, rgba(255,0,128,0.3) 0px, rgba(255,0,128,0.3) 1px, transparent 1px, transparent 60px);
+            background-size: 60px 100%;
+        }
+
+        .grid::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: repeating-linear-gradient(180deg, rgba(255,0,128,0.3) 0px, rgba(255,0,128,0.3) 1px, transparent 1px, transparent 60px);
+            background-size: 100% 60px;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 12px 24px;
+            background: #ff0080;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin-top: 20px;
+            transition: all 0.3s ease;
+        }
+
+        .btn:hover {
+            background: #ff8c00;
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(255, 0, 128, 0.4);
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
+        <h1 class="error-code">404</h1>
+        <h2 class="title">Página no encontrada</h2>
+        <p class="description">Parece que te has perdido en el ciberespacio. La página que buscas no existe o ha sido movida a otra dimensión.</p>
+        <a href="/" class="btn">Volver al inicio</a>
+    </div>
+    <div class="grid"></div>
 </body>
 </html>
