--- a/404.html
+++ b/404.html
@@ -8,10 +8,10 @@
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
 
         :root {
-            --primary: #ff0080;
-            --secondary: #7e1fe0;
-            --accent: #00fff3;
-            --dark: #1a0b2e;
+            --primary: #ffffff;
+            --secondary: #1a237e;
+            --accent: #4a148c;
+            --dark: #0a0426;
         }
 
         * {
@@ -22,7 +22,7 @@
 
         body {
             min-height: 100vh;
-            background: linear-gradient(180deg, var(--dark) 0%, #2c1955 100%);
+            background: linear-gradient(180deg, var(--dark) 0%, #1a1a35 100%);
             font-family: 'Orbitron', sans-serif;
             color: #fff;
             overflow: hidden;
@@ -42,10 +42,10 @@
         .error-code {
             font-size: 150px;
             font-weight: 700;
-            background: linear-gradient(to right, var(--primary), var(--accent));
+            background: linear-gradient(to right, var(--primary), #8293ff);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+            text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             animation: glitch 3s infinite;
         }
 
@@ -70,7 +70,7 @@
             display: inline-block;
             padding: 15px 30px;
             background: var(--primary);
-            color: #fff;
+            color: var(--dark);
             text-decoration: none;
             border-radius: 4px;
             font-weight: 500;
@@ -84,6 +84,7 @@
 
         .home-button:hover {
             background: transparent;
+            color: var(--primary);
             box-shadow: 0 0 20px var(--primary);
         }
 
@@ -93,8 +94,8 @@
             height: 100%;
             bottom: -50%;
             background-image: 
-                linear-gradient(transparent 0%, rgba(255, 0, 128, 0.1) 2%, transparent 3%),
-                linear-gradient(90deg, transparent 0%, rgba(255, 0, 128, 0.1) 2%, transparent 3%);
+                linear-gradient(transparent 0%, rgba(255, 255, 255, 0.05) 2%, transparent 3%),
+                linear-gradient(90deg, transparent 0%, rgba(255, 255, 255, 0.05) 2%, transparent 3%);
             background-size: 50px 50px;
             transform: perspective(300px) rotateX(60deg);
             animation: grid 20s linear infinite;
@@ -111,25 +112,25 @@
 
         @keyframes glitch {
             0% {
-                text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             }
             15% {
-                text-shadow: -2px 0 var(--primary), 2px 0 var(--accent);
+                text-shadow: -2px 0 var(--primary), 2px 0 #8293ff;
             }
             16% {
-                text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             }
             49% {
-                text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             }
             50% {
-                text-shadow: 2px 0 var(--accent), -2px 0 var(--primary);
+                text-shadow: 2px 0 #8293ff, -2px 0 var(--primary);
             }
             51% {
-                text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             }
             100% {
-                text-shadow: 0 0 20px rgba(255, 0, 128, 0.5);
+                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             }
         }
 
@@ -152,7 +153,7 @@
             background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 2 2' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='1' cy='1' r='1' fill='white'/%3E%3C/svg%3E");
             background-size: 3px 3px;
             animation: stars 20s linear infinite;
-            opacity: 0.5;
+            opacity: 0.3;
         }
 
         @keyframes stars {
