--- a/404.html
+++ b/404.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 - Página no encontrada</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
         :root {
-            --primary: #ffffff;
-            --secondary: #1a237e;
-            --accent: #4a148c;
-            --dark: #0a0426;
+            --primary: #FFA500;  /* Naranja */
+            --secondary: #800080;  /* Morado */
+            --accent: #FFD700;  /* Amarillo dorado */
+            --dark: #4A0E4E;  /* Fondo morado oscuro */
         }
 
         * {
@@ -22,14 +22,14 @@
 
         body {
             min-height: 100vh;
-            background: linear-gradient(180deg, var(--dark) 0%, #1a1a35 100%);
-            font-family: 'Orbitron', sans-serif;
+            background-color: var(--dark);
+            font-family: 'Press Start 2P', cursive;
             color: #fff;
-            overflow: hidden;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
 
         .error-container {
@@ -42,10 +42,8 @@
         .error-code {
             font-size: 150px;
             font-weight: 700;
-            background: linear-gradient(to right, var(--primary), #8293ff);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            color: var(--primary);
+            text-shadow: 2px 2px var(--secondary);
             animation: glitch 3s infinite;
         }
 
@@ -55,12 +53,12 @@
             margin: 20px 0;
             text-transform: uppercase;
             letter-spacing: 4px;
-            text-shadow: 0 0 10px var(--primary);
+            text-shadow: 2px 2px var(--secondary);
         }
 
         .error-message {
             font-size: 18px;
-            color: #fff;
+            color: var(--accent);
             margin-bottom: 30px;
             max-width: 600px;
             line-height: 1.5;
@@ -70,7 +68,7 @@
             display: inline-block;
             padding: 15px 30px;
             background: var(--primary);
-            color: var(--dark);
+            color: #fff;
             text-decoration: none;
             border-radius: 4px;
             font-weight: 500;
@@ -84,96 +82,71 @@
 
         .home-button:hover {
             background: transparent;
-            color: var(--primary);
             box-shadow: 0 0 20px var(--primary);
         }
 
-        .grid {
+        .pixel-art {
             position: absolute;
             width: 100%;
             height: 100%;
-            bottom: -50%;
-            background-image: 
-                linear-gradient(transparent 0%, rgba(255, 255, 255, 0.05) 2%, transparent 3%),
-                linear-gradient(90deg, transparent 0%, rgba(255, 255, 255, 0.05) 2%, transparent 3%);
-            background-size: 50px 50px;
-            transform: perspective(300px) rotateX(60deg);
-            animation: grid 20s linear infinite;
+            top: 0;
+            left: 0;
+            z-index: -1;
+            opacity: 0.2;
         }
 
-        @keyframes grid {
-            0% {
-                transform: perspective(300px) rotateX(60deg) translateY(0);
-            }
-            100% {
-                transform: perspective(300px) rotateX(60deg) translateY(50px);
-            }
+        .pixel {
+            position: absolute;
+            width: 10px;
+            height: 10px;
+            background-color: #fff;
         }
 
         @keyframes glitch {
             0% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+                text-shadow: 2px 2px var(--secondary);
             }
             15% {
-                text-shadow: -2px 0 var(--primary), 2px 0 #8293ff;
+                text-shadow: -2px 0 var(--primary), 2px 0 var(--accent);
             }
             16% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+                text-shadow: 2px 2px var(--secondary);
             }
             49% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+                text-shadow: 2px 2px var(--secondary);
             }
             50% {
-                text-shadow: 2px 0 #8293ff, -2px 0 var(--primary);
+                text-shadow: 2px 0 var(--accent), -2px 0 var(--primary);
             }
             51% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+                text-shadow: 2px 2px var(--secondary);
             }
             100% {
-                text-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            }
-        }
-
-        .stars {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-        }
-
-        .stars::after {
-            content: "";
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 2 2' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='1' cy='1' r='1' fill='white'/%3E%3C/svg%3E");
-            background-size: 3px 3px;
-            animation: stars 20s linear infinite;
-            opacity: 0.3;
-        }
-
-        @keyframes stars {
-            0% {
-                transform: rotate(0deg);
-            }
-            100% {
-                transform: rotate(360deg);
+                text-shadow: 2px 2px var(--secondary);
             }
         }
     </style>
 </head>
 <body>
-    <div class="stars"></div>
-    <div class="grid"></div>
+    <div class="pixel-art" id="pixelArt"></div>
     <div class="error-container">
         <h1 class="error-code">404</h1>
         <h2 class="error-title">Página no encontrada</h2>
         <p class="error-message">Parece que te has perdido en el ciberespacio. La página que buscas no existe o ha sido movida a otra dimensión.</p>
         <a href="/" class="home-button">Volver al inicio</a>
     </div>
+
+    <script>
+        // Crear píxeles para el fondo
+        const pixelArt = document.getElementById('pixelArt');
+        for (let i = 0; i < 100; i++) {
+            const pixel = document.createElement('div');
+            pixel.classList.add('pixel');
+            pixel.style.left = `${Math.random() * 100}%`;
+            pixel.style.top = `${Math.random() * 100}%`;
+            pixel.style.backgroundColor = ['#FFA500', '#800080', '#FFD700'][Math.floor(Math.random() * 3)];
+            pixelArt.appendChild(pixel);
+        }
+    </script>
 </body>
 </html>
