--- a/404.html
+++ b/404.html
@@ -133,7 +133,7 @@
         <h1 class="error-code">404</h1>
         <h2 class="error-title">Página no encontrada</h2>
         <p class="error-message">Parece que te has perdido en el ciberespacio. La página que buscas no existe o ha sido movida a otra dimensión.</p>
-        <a href="/" class="home-button">Volver al inicio</a>
+        <a href="https://akissame.com.co/" class="home-button">Volver al inicio</a>
     </div>
 
     <script>
