--- a/404.html
+++ b/404.html
@@ -132,7 +132,8 @@
     <div class="error-container">
         <h1 class="error-code">404</h1>
         <h2 class="error-title">Página no encontrada</h2>
-        <p class="error-message">Parece que te has perdido en el ciberespacio. La página que buscas no existe o ha sido movida a otra dimensión.</p>
+        <p class="error-message">Parece que te has perdido en el ciberespacio.</p>
+        <p class="error-message">La página que buscas no existe o ha sido movida a otra dimensión.</p>
         <a href="https://akissame.com.co/" class="home-button">Volver al inicio</a>
     </div>
 
