--- a/index.html
+++ b/index.html
@@ -1,9 +1,37 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <body>
 	<h1>Game Info Module:</h1>
 	<pre id="game-info"></pre>
 	<script type="module" src="js/index.js"></script>
 
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Game Info Module</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <!-- 🔹 Barra de navegación -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="soporte.html">Soporte</a></li>
+      <li><a href="politica.html">Política de Privacidad</a></li>
+      <li><a href="contacto.html">Contacto</a></li>
+    </ul>
+  </nav>
+
+  <div class="content">
+    <h1>Game Info Module:</h1>
+    <pre id="game-info"></pre>
+  </div>
+
+  <script type="module" src="js/index.js"></script>
 </body>
 </html>
